--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -23,7 +23,7 @@ body {
 	//=================
 	// Light/Dark mode
 	//=================
-	// Light/Dark mode -- Common (i.e. typically used) -- strong (i.e. more distinct) text color
+	// Light/Dark mode -- Common (i.e. used by multiple components) -- strong (i.e. more distinct) text color
 	.js-set-common-strong-text-color-dark-mode-false {
 		color: v.$mode-common-strong-text-color-light;
 	}
@@ -31,7 +31,7 @@ body {
 		color: v.$mode-common-strong-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. typically used) -- weak (i.e. less distinct) text color
+	// Light/Dark mode -- Common (i.e. used by multiple components) -- weak (i.e. less distinct) text color
 	.js-set-common-weak-text-color-dark-mode-false {
 		color: v.$mode-common-weak-text-color-light;
 	}
@@ -39,20 +39,20 @@ body {
 		color: v.$mode-common-weak-text-color-dark;
 	}
 
-	// Light/Dark mode -- backend-errors -- text color
-	.js-set-backend-errors-text-color-dark-mode-false {
-		color: v.$mode-backend-errors-text-color-light;
+	// Light/Dark mode -- Common (i.e. used by multiple components) 'backend-errors' -- text color
+	.js-set-common-backend-errors-text-color-dark-mode-false {
+		color: v.$mode-common-backend-errors-text-color-light;
 	}
-	.js-set-backend-errors-text-color-dark-mode-true {
-		color: v.$mode-backend-errors-text-color-dark;
+	.js-set-common-backend-errors-text-color-dark-mode-true {
+		color: v.$mode-common-backend-errors-text-color-dark;
 	}
 
-	// Light/Dark mode -- char-count limit reached -- text color
-	.js-set-char-count-limit-reached-text-color-dark-mode-false {
-		color: v.$mode-char-count-limit-reached-text-color-light;
+	// Light/Dark mode -- Common (i.e. used by multiple components) char-count (when limit is reached) -- text color
+	.js-set-common-char-count-limit-reached-text-color-dark-mode-false {
+		color: v.$mode-common-char-count-limit-reached-text-color-light;
 	}
-	.js-set-char-count-limit-reached-text-color-dark-mode-true {
-		color: v.$mode-char-count-limit-reached-text-color-dark;
+	.js-set-common-char-count-limit-reached-text-color-dark-mode-true {
+		color: v.$mode-common-char-count-limit-reached-text-color-dark;
 	}
 
 	// Light/Dark mode -- blurred-background -- background color and opacity
@@ -75,7 +75,7 @@ body {
 		opacity: v.$mode-click-to-close-blurred-background-opacity-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. typically used) icon-buttons -- text color with hover
+	// Light/Dark mode -- Common (i.e. used by multiple components) icon-buttons -- text color with hover
 	.js-set-common-icon-button-text-color-with-hover-dark-mode-false {
 		color: v.$mode-common-icon-button-text-color-light;
 
@@ -101,7 +101,7 @@ body {
 		color: v.$mode-universal-text-grayed-out-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. typically used) form input element -- border, background, and text color
+	// Light/Dark mode -- Common (i.e. used by multiple components) form input element -- border, background, and text color
 	.js-set-common-form-input-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-common-form-input-border-color-light;
 		background-color: v.$mode-common-form-input-background-color-light;
@@ -111,6 +111,29 @@ body {
 		border-color: v.$mode-common-form-input-border-color-dark;
 		background-color: v.$mode-common-form-input-background-color-dark;
 		color: v.$mode-common-strong-text-color-dark;
+	}
+
+	// Light/Dark mode -- Common (i.e. used by multiple components) ListViewTopBar 'list-view-top-bar-component' 
+	// ...and ItemViewTopBar 'item-vew-top-bar-component' -- border and background color
+	.js-common-set-top-bar-border-and-background-color-dark-mode-false {
+		border-color: v.$mode-common-top-bar-border-color-light;
+		background-color: v.$mode-common-top-bar-background-color-light;
+	}
+	.js-common-set-top-bar-border-and-background-color-dark-mode-true {
+		border-color: v.$mode-common-top-bar-border-color-dark;
+		background-color: v.$mode-common-top-bar-background-color-dark;
+	}
+
+	// Light/Dark mode -- Common (i.e. used by multiple components) ListViewTopBar/ItemViewTopBar buttons and dropdowns -- border, background, and text color
+	.js-set-common-top-bar-button-and-dropdown-border-background-text-color-dark-mode-false {
+		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-light;
+		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-light;
+		color: v.$mode-common-top-bar-button-and-dropdown-text-color-light;
+	}
+	.js-set-common-top-bar-button-and-dropdown-border-background-text-color-dark-mode-true {
+		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-dark;
+		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-dark;
+		color: v.$mode-common-top-bar-button-and-dropdown-text-color-dark;
 	}
 
 	// Light/Dark mode -- Home 'home-container' -- background and text colors
@@ -188,20 +211,12 @@ body {
 		@include mode-hamburger-dropdown($is-light: false);
 	}
 
-	// Light/Dark mode -- AccountSidebar and AccountModal -- background color
-	.js-set-account-sidebar-modal-background-color-dark-mode-false {
-		background-color: v.$mode-account-sidebar-modal-background-color-light;
+	// Light/Dark mode -- AccountSidebar 'sidebar-container' -- background color
+	.js-set-account-sidebar-background-color-dark-mode-false {
+		background-color: v.$mode-account-sidebar-background-color-light;
 	}
-	.js-set-account-sidebar-modal-background-color-dark-mode-true {
-		background-color: v.$mode-account-sidebar-modal-background-color-dark;
-	}
-
-	// Light/Dark mode -- AccountSidebar and AccountModal -- background color
-	.js-set-account-sidebar-modal-background-color-dark-mode-false {
-		background-color: v.$mode-account-sidebar-modal-background-color-light;
-	}
-	.js-set-account-sidebar-modal-background-color-dark-mode-true {
-		background-color: v.$mode-account-sidebar-modal-background-color-dark;
+	.js-set-account-sidebar-background-color-dark-mode-true {
+		background-color: v.$mode-account-sidebar-background-color-dark;
 	}
 
 	// Light/Dark mode -- AccountSidebar horizontal-dividing-line -- border color
@@ -228,6 +243,14 @@ body {
 		&:active {
 			background-color: v.$mode-account-sidebar-logout-button-hover-background-color-dark;
 		}
+	}
+
+	// Light/Dark mode -- AccountModal 'edit-account-modal' -- background color
+	.js-set-account-modal-background-color-dark-mode-false {
+		background-color: v.$mode-account-modal-background-color-light;
+	}
+	.js-set-account-modal-background-color-dark-mode-true {
+		background-color: v.$mode-account-modal-background-color-dark;
 	}
 
 	// Light/Dark mode -- AccountModalDeleteAccount capital-delete -- text color
@@ -292,28 +315,6 @@ body {
 		& > .category-container__content-container {
 			color: v.$mode-common-weak-text-color-dark;
 		}
-	}
-
-	// Light/Dark mode -- ListViewTopBar and ItemViewTopBar -- border and background color
-	.js-set-top-bar-border-and-background-color-dark-mode-false {
-		border-color: v.$mode-top-bar-border-color-light;
-		background-color: v.$mode-top-bar-background-color-light;
-	}
-	.js-set-top-bar-border-and-background-color-dark-mode-true {
-		border-color: v.$mode-top-bar-border-color-dark;
-		background-color: v.$mode-top-bar-background-color-dark;
-	}
-
-	// Light/Dark mode -- ListViewTopBar and ItemViewTopBar buttons -- border, background, and text color
-	.js-set-top-bar-button-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-button-border-color-light;
-		background-color: v.$mode-top-bar-button-background-color-light;
-		color: v.$mode-top-bar-button-text-color-light;
-	}
-	.js-set-top-bar-button-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-button-border-color-dark;
-		background-color: v.$mode-top-bar-button-background-color-dark;
-		color: v.$mode-top-bar-button-text-color-dark;
 	}
 
 	// Light/Dark mode -- CreateItemSidebar -- background color
@@ -474,14 +475,14 @@ body {
 
 	// Light/Dark mode -- ItemViewTopBar options-button -- clicked border, background, and text color
 	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
-		border-color: v.$mode-top-bar-button-border-color-light;
-		background-color: v.$mode-top-bar-button-background-color-light;
+		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-light;
+		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-light;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-item-view-top-bar-icon-button-hover-text-color-light;
 	}
 	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-true {
-		border-color: v.$mode-top-bar-button-border-color-dark;
-		background-color: v.$mode-top-bar-button-background-color-dark;
+		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-dark;
+		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-dark;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-item-view-top-bar-icon-button-hover-text-color-dark;
 	}
@@ -658,9 +659,9 @@ body {
 		}
 	}
 
-	//========
-	// Themes
-	//========
+	//==================================================================
+	// Themes (all themes are common, i.e. used by multiple components)
+	//==================================================================
 	// Theme -- border color
 	.js-set-brighter-border-color-theme-blue-turkish {
 		border-color: v.$theme-brighter-border-background-color-blue-turkish;
@@ -1004,17 +1005,17 @@ body {
 	) {
 		& > .new-item-tutorial-container__arrow-head {
 			@if $is-light {
-				border-bottom-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
+				border-bottom-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-light;
 			} @else {
-				border-bottom-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-dark;
+				border-bottom-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-dark;
 			}
 		}
 
 		& > .new-item-tutorial-container__arrow-stock {
 			@if $is-light {
-				background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
+				background-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-light;
 			} @else {
-				background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-dark;
+				background-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-dark;
 			}
 		}
 
@@ -1022,9 +1023,9 @@ body {
 			&
 				> .new-item-tutorial-container__bend-message-centering-container__arrow-bend {
 				@if $is-light {
-					background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
+					background-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-light;
 				} @else {
-					background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-dark;
+					background-color: v.$mode-common-top-bar-new-item-tutorial-arrow-background-color-dark;
 				}
 			}
 
@@ -1160,7 +1161,7 @@ body {
 		}
 	}
 
-	// Theme + Light/Dark mode --  text color
+	// Theme + Light/Dark mode -- text color
 	.js-set-text-color-mode-light-theme-blue-turkish {
 		color: v.$theme-mode-blue-turkish-text-color-light;
 	}
@@ -1303,19 +1304,20 @@ body {
 		);
 	}
 
-	// Theme + Light/Dark mode -- ListViewTopBar and ItemViewTopBar search-bar -- border, background, and text color
-	@mixin theme-mode-top-bar-search-bar(
+	// Theme + Light/Dark mode -- Common (i.e. used by multiple components) ListViewTopBar/ItemViewTopBar
+	// ...search container -- border, background, and text color
+	@mixin theme-mode-common-top-bar-search-container(
 		$theme-border-background-color,
 		$is-light
 	) {
 		& > input {
 			border-color: $theme-border-background-color;
 			@if $is-light {
-				background-color: v.$mode-top-bar-search-bar-background-color-light;
-				color: v.$mode-top-bar-search-bar-text-color-light;
+				background-color: v.$mode-common-top-bar-search-bar-background-color-light;
+				color: v.$mode-common-top-bar-search-bar-text-color-light;
 			} @else {
-				background-color: v.$mode-top-bar-search-bar-background-color-dark;
-				color: v.$mode-top-bar-search-bar-text-color-dark;
+				background-color: v.$mode-common-top-bar-search-bar-background-color-dark;
+				color: v.$mode-common-top-bar-search-bar-text-color-dark;
 			}
 		}
 
@@ -1324,62 +1326,62 @@ body {
 			background-color: $theme-border-background-color;
 		}
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-blue-turkish {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-light-theme-blue-turkish {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-turkish,
 			$is-light: true
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-blue-turkish {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-dark-theme-blue-turkish {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-turkish,
 			$is-light: false
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-blue-queen {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-light-theme-blue-queen {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-queen,
 			$is-light: true
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-blue-queen {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-dark-theme-blue-queen {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-queen,
 			$is-light: false
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-blue-sky {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-light-theme-blue-sky {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-sky,
 			$is-light: true
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-blue-sky {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-dark-theme-blue-sky {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-sky,
 			$is-light: false
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-blue-turquoise {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-light-theme-blue-turquoise {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-turquoise,
 			$is-light: true
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-blue-turquoise {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-dark-theme-blue-turquoise {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-blue-turquoise,
 			$is-light: false
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-purple-rain {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-light-theme-purple-rain {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-purple-rain,
 			$is-light: true
 		);
 	}
-	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-purple-rain {
-		@include theme-mode-top-bar-search-bar(
+	.js-set-common-top-bar-search-container-border-background-text-color-mode-dark-theme-purple-rain {
+		@include theme-mode-common-top-bar-search-container(
 			v.$theme-standard-border-background-color-purple-rain,
 			$is-light: false
 		);
