--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
@@ -2,20 +2,20 @@
 @use "../../utils/mixins" as m;
 
 .delete-modal-component {
-	.blurred-background {
+	.blurred-backdrop {
 		// Must be the same or more than listViewTopBar.scss & itemViewTopBar.scss
 		z-index: 2;
 		position: fixed;
 		top: 0px;
 		left: 0px;
-		background-color: v.$mode-blurred-background-background-color-light;
-		opacity: v.$mode-blurred-background-opacity-light;
+		background-color: v.$mode-common-blurred-backdrop-background-color-light;
+		opacity: v.$mode-common-blurred-backdrop-opacity-light;
 		height: 100vh;
 		width: 100vw;
 	}
 
-	.blurred-background--click-to-close {
-		opacity: v.$mode-click-to-close-blurred-background-opacity-light;
+	.blurred-backdrop--click-to-close {
+		opacity: v.$mode-common-blurred-backdrop-click-to-close-opacity-light;
 	}
 
 	.delete-modal {
